# fastapi_postgres_pytests

./: Dockerfile  Makefile  README.md  docker-compose.yaml  main.py  pyproject.toml
api/: router.py
api/routes/: transactions.py
core/: config.py
db/: sessions.py
db/repositories/: transactions.py
db/tables/: base_class.py  transactions.py
schemas/: bands.py  transactions.py
scripts/: create_databases.sql
tests/: conftest.py
tests/test_repositories/: test_transactions.py
tests/test_routes/: test_transactions.py
tests/test_schemas/: test_transactions.py
