[tool.poetry]
name = "fastapi_postgres_pytests"
version = "0.1.0"
description = ""
authors = ["Arturo Cuicas"]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^0.21.1"
fastapi = "^0.89.1"
uvicorn = "^0.20.0"
pydantic = "^1.10.4"
sqlmodel = "^0.0.8"
psycopg2-binary = "^2.9.5"
asyncpg = "^0.27.0"

[tool.poetry.dev-dependencies]
black = "^22.12.0"
flake8 = "^6.0.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
